<resources>
    //title
    <string name="app_name">HutechFood</string>
    <string name="home">Trang chủ</string>
    <string name="menu">Danh mục</string>
    <string name="introduce">Thông tin</string>
    <string name="contact">Phản hồi</string>
    <string name="logout">Đăng xuất</string>
    <string name="map">Địa chỉ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="checkout">Thanh toán</string>
    <string name="notify">Thông báo</string>
    <string name="introduce_info_top">Thông tin nhà hàng</string>
    <string name="res_name">Nhà hàng HUTECH Campus</string>
    <string name="res_address">Khu Công nghệ cao TP.HCM (SHTP), Xa lộ Hà Nội, Phường Hiệp Phú, TP. Thủ Đức, TP.HCM</string>
    <string name="res_phone">0961 247 427</string>
    <string name="res_note">Để lại bình luận, ý kiến và đánh giá:</string>
    <string name="res_note_valid">Bạn chưa nhập lời nhắn!</string>
    <string name="ggmap_key">AIzaSyCp6QdfVZJOQ6QoXVTNH3B7wYsdT-EHf4E</string>
    <string name="continue_buy">Tiếp tục chọn món</string>
    <string name="buy">Chọn món</string>
    <string name="menu_detail_title">Chi tiết danh mục</string>
    <string name="food_detail_title">Chi tiết món</string>

    <string name="checkout_info">Thông tin thanh toán</string>
    <string name="user_name">Tên khách hàng</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Số điện thoại</string>
    <string name="user_note">Ghi chú</string>
    <string name="type_user_name">Họ tên khách hàng</string>
    <string name="type_user_email">vd: hutech@gmail.com</string>
    <string name="type_user_phone">Nhập số điện thoại</string>
    <string name="type_user_note">Nhập lời nhắn...</string>

    /label button
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="payment">Thanh toán</string>
    <string name="payment_last">Thanh toán thôi!</string>
    <string name="to_Home">Về trang chủ</string>
    <string name="sent_mess">Gửi</string>
    <string name="total_price">Tổng cộng:</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không</string>

    //thông báo!!!
    <string name="error_network">Không có Internet!</string>
    <string name="error_server">Không thể kết nối với Server!</string>
    <string name="empty_cart_notify">Giỏ hàng trống!</string>
    <string name="validation">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="none_name">Vui lòng nhập tên khách hàng!</string>
    <string name="none_email">Vui lòng nhập email!</string>
    <string name="none_phone">Vui lòng nhập số điện thoại!</string>
    <string name="invalid_email">Email chưa đúng định dạng!</string>
    <string name="overload_phone">Số điện thoại không được vượt quá</string>
    <string name="char_style">ký tự</string>

    <string name="order_send_success">Thành công!</string>
    <string name="order_send_success_show">Thành công</string>
    <string name="order_send_error">Lỗi khi gửi đơn hàng!</string>
    <string name="empty_cart">Vui lòng chọn món trước khi thanh toán!</string>
    <string name="ask_to_delete">Bạn muốn xóa món này?</string>
    <string name="mess_send_success">Đã gửi thành công!</string>
    <string name="mess_send_error">Gửi không thành công!</string>
    <string name="order_success">Đơn hàng của bạn đã được gửi đi!</string>

    //link hình ảnh
    <string name="slide_1">https://intphcm.com/data/upload/poster-do-an-onl.jpg</string>
    <string name="slide_2">https://images.squarespace-cdn.com/content/v1/5bd14f3d2727be5c8afd77ee/1599652299326-IWT5BGUXZOGH1LUZI3UO/Hi%CC%80nh+banner+nho%CC%81m+mo%CC%81n_Mo%CC%81n+a%CC%86n+nhe%CC%A3.jpg</string>
    <string name="slide_3">https://assets.grab.com/wp-content/uploads/sites/11/2020/03/20173816/Buoisang_Banner-min.jpg</string>
    <string name="slide_4">https://hinhanhdephd.com/wp-content/uploads/2019/12/tet-2023.jpg</string>

    <string name="title_activity_gioi_thieu_chung">GioiThieuChungActivity</string>

</resources>