<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/fifth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LienHeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_Lienhe"
        app:title="@string/contact"
        app:navigationIcon="@drawable/ic_back_button"
        app:titleTextColor="@color/white"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <FrameLayout
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/margin_1_2"
            android:layout_width="@dimen/wrap_cart_width"
            android:layout_height="?attr/actionBarSize">
            <FrameLayout
                android:onClick="openCart"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/miniCart"
                    android:src="@drawable/ic_cart"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </FrameLayout>
        </FrameLayout>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_marginTop="@dimen/margin_1_2"
        android:layout_marginBottom="@dimen/margin_1_2"
        android:background="@color/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:onClick="ToHome"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/logo_app"
                android:layout_marginRight="@dimen/margin_1_2"
                android:layout_width="@dimen/item_logo_top_size"
                android:layout_height="@dimen/item_logo_top_size"/>
            <TextView
                android:layout_width="@dimen/app_name_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/padding_text"
                android:fontFamily="@font/dancing_script_medium"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />
        </LinearLayout>
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="900dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/res_name"
                    android:textColor="#E0F44336"
                    android:textSize="@dimen/text_size_total"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_1_2"
                    android:gravity="center"
                    android:text="Liên hệ qua số Hotline"
                    android:textColor="@color/second"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_1_2"
                        android:background="@color/second"
                        android:padding="@dimen/padding_1"
                        android:text="@string/res_phone"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_meidum"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_1_2"
                    android:gravity="center"
                    android:text="Feedback"
                    android:textColor="@color/second"
                    android:textSize="@dimen/text_size_title"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_mess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/custom_button"
                        android:onClick="openMess"
                        android:padding="15dp"
                        android:src="@drawable/ic_mess" />
                </LinearLayout>

                <!--        <ImageView-->
                <!--            android:onClick="DitalPhone"-->
                <!--            android:layout_gravity="end"-->
                <!--            android:padding="15dp"-->
                <!--            android:layout_marginTop="15dp"-->
                <!--            android:layout_marginBottom="15dp"-->
                <!--            android:layout_marginRight="30dp"-->
                <!--            android:layout_marginLeft="15dp"-->
                <!--            android:background="@drawable/custom_button"-->
                <!--            android:src="@drawable/ic_phone"-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"/>-->
            </FrameLayout>


            <ScrollView
                android:id="@+id/scroll_mess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_1"
                android:layout_marginTop="25dp"
                android:layout_marginRight="@dimen/margin_1"
                android:background="@drawable/custom_rate"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mess_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_1_2"
                        android:layout_marginBottom="@dimen/margin_1"
                        android:gravity="center"
                        android:text="@string/res_note"
                        android:textColor="@color/second"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/mess_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_1"
                        android:gravity="center"
                        android:text="@string/res_note_valid"
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_title"
                        android:visibility="gone" />

                    <EditText
                        android:id="@+id/text_mess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_1"
                        android:layout_marginRight="@dimen/margin_1"
                        android:layout_marginBottom="@dimen/margin_1"
                        android:background="@drawable/custom_input"
                        android:hint="@string/type_user_note"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        android:maxLines="6"
                        android:minLines="1"
                        android:paddingLeft="20dp"
                        android:paddingTop="@dimen/padding_2"
                        android:paddingRight="@dimen/padding_2"
                        android:paddingBottom="@dimen/padding_2"
                        android:scrollbars="vertical"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_dark"
                        android:textSize="@dimen/text_size" />

                    <Button
                        android:id="@+id/btn_sent_mess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_2"
                        android:layout_marginTop="@dimen/margin_1"
                        android:layout_marginRight="@dimen/margin_2"
                        android:layout_marginBottom="@dimen/margin_1"
                        android:background="@drawable/custom_button"
                        android:backgroundTint="@color/second"
                        android:onClick="sentMess"
                        android:text="@string/sent_mess"
                        android:textColor="@color/fifth"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />
                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/feedback" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>